# kun-galgame-nuxt3

./: .env.example  .eslintrc  .gitignore  .prettierignore  .prettierrc  README.md  Readme_JA.md  Readme_ZH.md  app.vue  content.config.ts  ecosystem.config.js  error.vue  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  res.json  tsconfig.json
.github/: renovate.json
.husky/: pre-commit
algorithms/: BayesianSmoothingAlg.ts  GalgameRatingAlg.ts
app/: app.vue
apps/backend/api/: Cargo.toml
apps/backend/api/src/: lib.rs
composables/: Message.ts  useBackgroundPicture.ts  useDiff.ts  useFlatten.ts  useKunClip.ts  useKunCopy.ts  useKunDisableSeo.ts  useKunId.ts  useKunLightbox.ts  useKunLoliInfo.ts  useKunSchemaValidator.ts  useKunSeoMeta.ts  useLocalforage.ts  useMessage.ts  useRoute.ts  useSocketIO.ts  useSocketIOErrorHandler.ts  useTriangulate.ts
config/: admin.ts  app.ts  config.d.ts  email-whitelist.ts  friend.json  friend.ts  kungal.ts  limit.ts  moemoepoint.ts  upload.ts
constants/: activity.ts  admin.ts  auth.ts  category.ts  doc.ts  edit.ts  galgame-rating.ts  galgame.ts  galgameOfficial.ts  galgameResource.ts  galgameTag.ts  galgameWebsite.ts  layout.ts  ranking.ts  report.ts  section.ts  toolset.ts  topic.ts  update-log.ts  update.ts  user.ts  website.ts
docs/: Readme_JA_JP.md  Readme_ZH_CN.md  Readme_ZH_TW.md
error/: errorHandler.ts  errorI18n.ts  kunMessage.ts  onRequestError.ts
language/: en.json  en.ts  i18n.ts  ja-JP.json  zh-CN.json  zh-TW.json  zh.json  zh.ts
layouts/: blank.vue  (+3 more)
(+2103 files in other folders)
